--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ body {
   position: absolute;
   left: 350px;
   top: 85px;
+  cursor: pointer;
 }
 
 .notesList{
@@ -62,7 +63,6 @@ body {
   margin-top: 20px;
   border-radius: 5px;
   background-color: #ffffff;
-  
   
 }
 
